@@ -2,7 +2,9 @@
 Copyright (c) 2003-2012, CKSource - Frederico Knabben. All rights reserved.
 For licensing, see LICENSE.html or http://ckeditor.com/license
 */
-
+/*
+This CSS applies to the old 'default' Dokuwiki template
+*/
 body
 {
 	/* Font */
